; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_main.c__set_block.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_main.c__set_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_set_block(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_4__*, align 8
  %16 = alloca i32*, align 8
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %9, align 4
  %19 = call %struct.TYPE_4__* @find_chunk(i32 %17, i32 %18)
  store %struct.TYPE_4__* %19, %struct.TYPE_4__** %15, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %21 = icmp ne %struct.TYPE_4__* %20, null
  br i1 %21, label %22, label %47

22:                                               ; preds = %7
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  store i32* %24, i32** %16, align 8
  %25 = load i32*, i32** %16, align 8
  %26 = load i32, i32* %10, align 4
  %27 = load i32, i32* %11, align 4
  %28 = load i32, i32* %12, align 4
  %29 = load i32, i32* %13, align 4
  %30 = call i64 @map_set(i32* %25, i32 %26, i32 %27, i32 %28, i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %46

32:                                               ; preds = %22
  %33 = load i32, i32* %14, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %32
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %37 = call i32 @dirty_chunk(%struct.TYPE_4__* %36)
  br label %38

38:                                               ; preds = %35, %32
  %39 = load i32, i32* %8, align 4
  %40 = load i32, i32* %9, align 4
  %41 = load i32, i32* %10, align 4
  %42 = load i32, i32* %11, align 4
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* %13, align 4
  %45 = call i32 @db_insert_block(i32 %39, i32 %40, i32 %41, i32 %42, i32 %43, i32 %44)
  br label %46

46:                                               ; preds = %38, %22
  br label %55

47:                                               ; preds = %7
  %48 = load i32, i32* %8, align 4
  %49 = load i32, i32* %9, align 4
  %50 = load i32, i32* %10, align 4
  %51 = load i32, i32* %11, align 4
  %52 = load i32, i32* %12, align 4
  %53 = load i32, i32* %13, align 4
  %54 = call i32 @db_insert_block(i32 %48, i32 %49, i32 %50, i32 %51, i32 %52, i32 %53)
  br label %55

55:                                               ; preds = %47, %46
  %56 = load i32, i32* %13, align 4
  %57 = icmp eq i32 %56, 0
  br i1 %57, label %58, label %79

58:                                               ; preds = %55
  %59 = load i32, i32* %10, align 4
  %60 = call i32 @chunked(i32 %59)
  %61 = load i32, i32* %8, align 4
  %62 = icmp eq i32 %60, %61
  br i1 %62, label %63, label %79

63:                                               ; preds = %58
  %64 = load i32, i32* %12, align 4
  %65 = call i32 @chunked(i32 %64)
  %66 = load i32, i32* %9, align 4
  %67 = icmp eq i32 %65, %66
  br i1 %67, label %68, label %79

68:                                               ; preds = %63
  %69 = load i32, i32* %10, align 4
  %70 = load i32, i32* %11, align 4
  %71 = load i32, i32* %12, align 4
  %72 = call i32 @unset_sign(i32 %69, i32 %70, i32 %71)
  %73 = load i32, i32* %8, align 4
  %74 = load i32, i32* %9, align 4
  %75 = load i32, i32* %10, align 4
  %76 = load i32, i32* %11, align 4
  %77 = load i32, i32* %12, align 4
  %78 = call i32 @set_light(i32 %73, i32 %74, i32 %75, i32 %76, i32 %77, i32 0)
  br label %79

79:                                               ; preds = %68, %63, %58, %55
  ret void
}

declare dso_local %struct.TYPE_4__* @find_chunk(i32, i32) #1

declare dso_local i64 @map_set(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @dirty_chunk(%struct.TYPE_4__*) #1

declare dso_local i32 @db_insert_block(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @chunked(i32) #1

declare dso_local i32 @unset_sign(i32, i32, i32) #1

declare dso_local i32 @set_light(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
